deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-game-deployment
  labels:
    app: snake-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snake-game
  template:
    metadata:
      labels:
        app: snake-game
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: snake-game
          image: terratamldacr.azurecr.io/snake-game:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: snake-game-service
  labels:
    app: snake-game
spec:
  type: LoadBalancer
  selector:
    app: snake-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
