k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game-service
spec:
  type: LoadBalancer
  selector:
    app: snake-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
