service.yaml
apiVersion: v1
kind: Service
metadata:
  name: free-demo-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: free-demo
